# _sample

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  QUICKSTART.md  README.md  config.yaml  main.py  main_agent.py  main_api.py  main_mcp_sse.py  main_mcp_stdio.py  pyproject.toml  todo.md
.agents/skills/dev-mode-editable/: SKILL.md
.dev/: quick_check.http
.github/: copilot-instructions.md
.github/scripts/: patch-framework-source.sh
.github/workflows/: check-stable-template.yml  pr-quality.yml
adapters/input/: __init__.py  ingredient_fastapi.py  ingredient_fastmcp.py
adapters/input/fastapi/: __init__.py  dependencies.py  ingredient_router.py  register.py  router.py
adapters/input/fastmcp/: __init__.py  dependencies.py  ingredient_mcp.py  ingredient_tools.py  prompts.py  register.py  resources.py  tools.py
adapters/input/schemas/: ingredient_schema.py
adapters/output/: __init__.py  duckdb_ingredient_repository.py  in_memory_ingredient_repository.py  mongodb_ingredient_repository.py
application/services/: __init__.py  ingredient_service.py
application/use_cases/: __init__.py  find_by_name.py
config/: app.yaml
config/adapters/: adapters.yaml
data/: ingredient.csv
docs/: agent.md  http-conventions.md  implementation.md  quickstart.md  vault.md
domain/models/: ingredient.py
domain/ports/: __init__.py  ingredient_repository.py
domain/services/: ingredient_service.py
infrastructure/: agent_config.py  api.py  container.py  ingredient_container.py  mcp.py  purge_registry.py
infrastructure/containers/: ingredient_container.py
(+33 files in other folders)
