[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rekipe-sample"
version = "0.1.0"
description = "Sample CRUD — built on kcrud"
requires-python = ">=3.13"
dependencies = [
    "kcrud[mongodb,fastapi,mcp] @ file:///Users/killian/Karned/Rekipe/framework",
]

[tool.hatch.build.targets.wheel]
packages = [
    "domain",
    "adapters",
    "application",
    "infrastructure",
]

